@@ -2,6 +2,8 @@ v1.01
     - Fixed bug where selecting install location manually would lead to addons being installed in the wrong subfolder
     - Fixed bug where addons with certain special characters in their name would not properly install
     - Changed the system for downloading files, should be faster and hopefully deals with failed downloads and abnormal HTTP/IO problems more cleanly
+    - Fixed a bug where API reseponses from Curseforge with no "gameflavor" specification were causing failed update checking
+    - Updated the DataCollectionException and Log functionality to properly present all relevant information in case of exceptions
 
 v1.00
     - Fixed issue with manual install location selection
